<resources>
    <string name="app_name">Tagged Revision</string>
    <string name="show_answer">Show Answer</string>
    <string name="next">Next</string>
    <string name="instruction_get_started">Scan a suitable NFC Tag to get started!</string>
    <string name="add_location">Add Location</string>
    <string name="add_question">Add Question</string>
    <string name="enter_question">Enter a question:</string>
    <string name="enter_answer">Enter an answer:</string>
    <string name="add">Add</string>
    <string name="select_location">Select a location</string>
    <string name="enter_location">Enter a location:</string>
    <string name="write_to_tag">Write location to tag</string>
    <string name="location_missing">Please enter a location</string>
    <string name="location_added">Location added</string>
    <string name="question_added">Question added</string>
    <string name="no_location_selected">Please select a location</string>
    <string name="question_or_answer_missing">Please enter a question and answer</string>
    <string name="no_questions_found">No questions found at this location</string>
    <string name="connection_error">Connection Error</string>
</resources>