<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/instruction_text_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruction_get_started"
        android:textSize="@dimen/medium_font_size"
        android:padding="@dimen/default_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/location_title"
        android:visibility="gone"
        android:textSize="@dimen/medium_font_size"
        android:text="@string/enter_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/enter_location"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@+id/location_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/add_location_button"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/write_to_tag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>