<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/question_title"
        android:textSize="@dimen/medium_font_size"
        android:text="@string/enter_question"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/enter_question"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:inputType="textCapSentences"
        android:focusedByDefault="true"
        android:imeOptions="actionNext"
        android:nextFocusDown="@id/enter_answer"
        app:layout_constraintTop_toBottomOf="@+id/question_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/answer_title"
        android:textSize="@dimen/medium_font_size"
        android:text="@string/enter_answer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@+id/enter_question"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/enter_answer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"
        android:imeOptions="actionNext"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer_title" />

    <TextView
        android:id="@+id/option_title"
        android:textSize="@dimen/medium_font_size"
        android:text="@string/select_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@+id/enter_answer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/location_options"
        android:padding="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@+id/option_title"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/add_question_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>